# devloop

./: CLAUDE.md  CONTEXT.md  README.md  docker-compose.yml  pyproject.toml
.devloop/: CODING_STANDARDS.md  config.yaml
.devloop/prompts/: implement.md  plan.md  review.md
.github/workflows/: build-agent-base-image.yml  build-image.yml  ci.yml  publish-devloop-chart.yml  publish-discord-bot-image.yml  publish-poller-image.yml  publish-slack-bot-image.yml  publish-temporal-worker-image.yml  publish-to-pypi.yml  release.yml
.sentrux/: rules.toml
charts/devloop/: Chart.yaml  test-values.yaml  values.yaml
docs/: getting-started.md  github-app.md  local-quickstart.md  reference-temporal-values.yaml  security-model.md  sentrux.md  temporal-prerequisites.md
docs/examples/alert-response/: Dockerfile  README.md  alert_response.py  allowlist.yaml  pyproject.toml  worker.py
images/agent-base/: Dockerfile  entrypoint.py  pyproject.toml  runners.py  skills.py  test_dockerfile.py  test_entrypoint.py  test_human_question.py  test_project_tests.py  test_run_agent.py  test_runners.py  test_skills.py
images/discord-bot/: Dockerfile  activities.py  discord_client.py  main.py  pyproject.toml  test_text_utils.py  test_thread_store.py  text_utils.py  thread_store.py
images/slack-bot/: Dockerfile  main.py  pyproject.toml
images/temporal-worker/: Dockerfile
tests/: conftest.py  test_alert_response.py  test_as_int_consolidated.py  test_callback_selection.py  test_callbacks_shim_removed.py  test_cichecks.py  test_code_quality.py  test_code_quality_refactored.py  test_constants_consolidated.py  test_dev_loop.py  test_docker_dispatch.py  test_docs.py  test_execution.py  test_github.py  test_github_app_auth.py  test_github_comment_activity.py  test_github_ops.py  test_github_webhook.py  test_improve_phase.py  test_io_ops.py  test_issue_108_code_quality.py  test_job_dispatch_queue.py  test_k8s_jobs.py  test_kpi.py  test_messaging.py  test_phase_ops_io_methods.py  test_phases.py  test_pr_comment.py  test_pr_comment_phase.py  test_projects_chart_sync.py  test_publish_summary.py  test_pure_logic.py  test_quality_gate.py  test_scanning_phase.py  test_schedules.py  test_shared_backward_compat.py  test_shared_consolidated.py  test_stub_roundtrip.py  test_summarization.py  test_webhook_deep.py  (+1 more)
(+90 files in other folders)
