[project]
name = "omneval-devloop"
dynamic = ["version"]
requires-python = ">=3.12"
dependencies = [
    "temporalio==1.27.2",
    "pyyaml==6.0.2",
    "kubernetes==32.0.1",
    "httpx==0.28.1",
    "fastapi==0.115.6",
    "uvicorn==0.34.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# Version is derived from the git tag (e.g. v0.0.2 -> 0.0.2) so the tag is the
# single source of truth: the PyPI release, the Docker image semver tags, and the
# SDK pinned into each image all agree by construction. No manual version bump.
[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/devloop"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
testpaths = ["tests"]
