[project]
name = "discord-bot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "omneval-devloop[discord]",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

# No first-party package in this image — it runs main.py which imports from
# the installed omneval-devloop[discord] SDK. The build resolves dependencies
# only; py-modules = [] prevents setuptools from auto-discovering modules.
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

# uv project commands (uv run) install dependencies but do not build this app.
[tool.uv]
package = false
